--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@
 # Ignore bundler config.
 /.bundle
 
+# Ignore foreman files
+/.env
+/.foreman
+
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
